--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amazingcookie.github.io/VideoEditor",
+  "homepage": "https://amazingcookie.github.io/VideoEditor/",
   "name": "videoeditor",
   "version": "0.1.0",
   "private": true,
@@ -59,6 +59,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
