Add asset inspect function and update css style

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amazingcookie.github.io/VideoEditor",
+  "homepage": "https://amazingcookie.github.io/video-editor",
   "name": "videoeditor",
   "version": "0.1.0",
   "private": true,
