--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "lodash.throttle": "^4.1.1",
     "mp4box": "^0.5.2",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
